@@ -47,7 +47,7 @@ IMessageTranslator::IMessageTranslator()
 		fFileTypeTranslationTable["html"]	= "htmlf";
 		fFileTypeTranslationTable["htm"]	= "htmlf";
 		fFileTypeTranslationTable["gmn"]	= "gmnf";
-		fFileTypeTranslationTable["xml"]	= "gmnf";
+		fFileTypeTranslationTable["xml"]	= "musicxmlf";
 		fFileTypeTranslationTable["jpg"]	= "img";
 		fFileTypeTranslationTable["jpeg"]	= "img";
 		fFileTypeTranslationTable["gif"]	= "img";
