@@ -1,0 +1,70 @@
+/*
+
+  INScore Project
+
+  Copyright (C) 2009,2010  Grame
+
+  This library is free software; you can redistribute it and/or
+  modify it under the terms of the GNU Lesser General Public
+  License as published by the Free Software Foundation; either
+  version 2.1 of the License, or (at your option) any later version.
+
+  This library is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+  Lesser General Public License for more details.
+
+  You should have received a copy of the GNU Lesser General Public
+  License along with this library; if not, write to the Free Software
+  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+
+  Grame Research Laboratory, 9 rue du Garet, 69001 Lyon - France
+  research@grame.fr
+
+*/
+
+
+#ifndef __IMusicXMLFile__
+#define __IMusicXMLFile__
+
+#include <string>
+#include "IMusicXMLCode.h"
+#include "TFile.h"
+
+namespace inscore
+{
+
+/*!
+\addtogroup ITLModel
+@{
+*/
+
+class Updater;
+class IMusicXMLFile;
+typedef class libmapping::SMARTP<IMusicXMLFile>	SIMusicXMLFile;
+//--------------------------------------------------------------------------
+/*!
+	\brief a file based guido object
+*/
+class IMusicXMLFile : public IMusicXMLCode, public TFile
+{
+	public:		
+		static const std::string kMusicXMLFileType;
+		static SIMusicXMLFile create(const std::string& name, IObject * parent)	{ return new IMusicXMLFile(name, parent); }
+
+//		virtual void	print(std::ostream& out) const;
+		virtual void	accept (Updater*u);
+
+	protected:
+				 IMusicXMLFile( const std::string& name, IObject * parent);
+		virtual ~IMusicXMLFile() {}
+
+		/// \brief the \c 'set' message handler
+		virtual MsgHandler::msgStatus set (const IMessage* msg);
+};
+
+/*! @} */
+
+} // end namespoace
+
+#endif
