@@ -13,13 +13,14 @@ It has been supported by the ANR (ANR-08-CORD-010)
 
 ----------------------------------------------------
 Version 1.07
+- explicit objects for musicxml scores ('musicxml' and 'musicxmlf' types)
+- new 'faustdsp' object, charging libfaust as a plugin to compile faust DSP on-the-fly. 
 - exception catched when sending osc messages: was a potential crash, 
   e.g. in case of 'get' message sent to a signal with a large buffer -> out of buffer memory
 - new javascript 'post' function for posting delayed messages
 - new 'write' method supported by the 'log' window
 - variable addresses are evaluated in message based variables
 - support relative rotations on x and y axis
-- new 'faustdsp' object, charging libfaust as a plugin to compile faust DSP on-the-fly. 
 
 ----------------------------------------------------
 Version 1.06
